Replace .toList() with .collect()
.toList() was only introduced to android in api level 24, which is newer than
this module's min_sdk_version. Replace it with .collect().

This was found while updating android lint.

Flag: EXEMPT refactor
Bug: 394096385
Test: Presubmits
Change-Id: Id5fc63f50dd3d86ca211e430da2ed0bed267ec7a